metadata/labels/objects/Stage__c.object
<CustomObject>
    <description>The performance stages at the festival.</description>
    <fields>
        <fullName>Crowd_capacity__c</fullName>
        <description>The number of attendees that the stage can accommodate.</description>
        <label>Crowd capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Festival__c</fullName>
        <description>A one to many relationship between Festival and Stage(s).</description>
        <label>Festival</label>
        <referenceTo>Festival__c</referenceTo>
        <relationshipLabel>Stages</relationshipLabel>
        <relationshipName>Stages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Has_piano__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not a piano is on stage.</description>
        <label>Has piano</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_stage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox to indicate whether or not it is the main stage.</description>
        <label>Main stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_equipment_available__c</fullName>
        <description>A multi-select list for special equipment available.</description>
        <label>Special equipment available</label>
        <picklist>
            <picklistValues>
                <fullName>Lasers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pyrotechnics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smoke machines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple drumsets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extra subwoofers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stage_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The stage manager for the festival.</description>
        <label>Stage Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>